# process_manager_project

./: .gitignore  CMakeLists.txt  Doxyfile  INFORME.md  README.md  Tareas.md  Tasks.md  requirements.txt
.github/actions/building/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/workflows/: QAWorkflow.yml
include/: command_handler.h  globals.h  logger.h  logging.h  process_control.h  process_display.h  process_info.h  process_manager.h  resource_monitor.h  utils.h
src/: command_handler.cpp  globals.cpp  logger.cpp  logging.cpp  main.cpp  process_control.cpp  process_display.cpp  process_info.cpp  process_manager.cpp  resource_monitor.cpp  utils.cpp
test/: test_command_handler.cpp  test_concurrent_updates.cpp  test_main.cpp  test_process_control.cpp  test_process_info.cpp  test_resource_monitor.cpp
